# linuxcnc_s_kins_bkt

./: README.md
configs/sim/axis/vismach/5axis/table-rotary-tilting/: xyzac-trt.ini  xyzbc-trt.ini
docs/man/man9/: kins.9  motion.9
docs/src/: Master_Documentation.txt  Submakefile  index.tmpl
docs/src/getting-started/: updating-linuxcnc.txt
scripts/: halreport
src/: Makefile  modsilent.py
src/emc/kinematics/: 5axiskins.c  meson.build  scarakins-4.c  scarakins-l.c  scarakins-m.c  scarakins.c  scarakins10.c  scarakins11.c  scarakins4.c  scarakins_l.c
src/emc/motion/: control.c  mot_priv.h  motion.c
src/emc/usr_intf/gmoccapy/: getiniinfo.py
src/hal/user_comps/vismach/: hexagui.py  scaragui.py
