# Catch-all for now, may eliminate this soon
kinematics_srcs = files([
'5axiskins.c',
'genserkins.c',
'pumakins.c',
'scarakins.c',
'scarakins4.c',
'scarakins10.c',
'scarakins11.c',
'trivkins.c',
'cubic.c',
'genhexkins.c',
'maxkins.c',
'rotatekins.c',
'tripodkins.c',
])

kinematics_inc = include_directories('.')

# Individual kinematics sources (each object built separately since the )
trivkins_srcs = files('trivkins.c')

fiveaxiskins_srcs  = files('5axiskins.c')

maxkins_srcs  = files('maxkins.c')

rotatekins_srcs  = files('rotatekins.c')

tripodkins_srcs  = files('tripodkins.c')

genhexkins_srcs  = files('genhexkins.c')

genserkins_srcs  = files('genserkins.c')

pumakins_srcs  = files('pumakins.c')

scarakins_srcs  = files('scarakins.c')

scarakins4_srcs  = files('scarakins4.c')

scarakins10_srcs  = files('scarakins10.c')

scarakins11_srcs  = files('scarakins11.c')
